--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 
 <body>
 
+    <svg class="icon">
+        <use href="./images/icon/sprite.svg#icon-facebook"></use>
+    </svg>
+
+    <!-- <img src="./images/icon/facebook.svg" alt=""> -->
+
     <!-- Шапка -->
     <header class="page-header">
 
@@ -156,11 +162,16 @@
                 <h2 class="section-title">Постоянные клиенты</h2>
 
                 <ul class="regular-clients list" >
-                    <li><a class="logo-company" href=""><img src="./images/logo-company/logo-company-1.svg" alt=""></a></li>
-                    
+                    <li><a class="logo-client" href=""> 
+                            <svg class="icon-client">
+                                <use href="./images/sprite.svg#icon-client"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
 
         </section>
+
     </main>
 
     <!-- Подвал -->
