--- a/index.html
+++ b/index.html
@@ -361,6 +361,16 @@
                             </svg>
                         </a>
                     </li>
+
+                    <li class="regular-clients-item">
+                        <a class="regular-clients-link" href="">
+                            <svg class="clients-icon">
+                                <use href="./images/sprite.svg#logo-company-6"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+
                 </ul>
                 
             </div>
