--- a/index.html
+++ b/index.html
@@ -104,11 +104,23 @@
                 <h2 class="section-title">Чем мы занимаемся</h2>
 
                 <ul class="work list">
-                    <li class="work-pic"><img src="./images/img1.jpg" alt="руки на клавиатуре, перед экраном" width="370">
+                    <li class="work-pic">
+                        <div class="thumb">
+                            <img src="./images/img1.jpg" alt="руки на клавиатуре, перед экраном" width="370">
+                            <p class="label">Десктопные приложения</p>
+                        </div>
                     </li>
-                    <li class="work-pic"><img src="./images/img2.jpg" alt="смартфон в руке перед ноутбуком" width="370">
+                    <li class="work-pic">
+                        <div class="thumb">
+                            <img src="./images/img2.jpg" alt="смартфон в руке перед ноутбуком" width="370">
+                            <p class="label">Мобильные приложения</p>
+                        </div>
                     </li>
-                    <li class="work-pic"><img src="./images/img3.jpg" alt="цветовая палитра на планшете" width="370">
+                    <li class="work-pic">
+                        <div class="thumb">
+                            <img src="./images/img3.jpg" alt="цветовая палитра на планшете" width="370">
+                            <p class="label">Дизайнерские решения</p>
+                        </div>
                     </li>
                 </ul>
             </div>
